--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "option": {
-    "forceLogin": false,
+    "forceLogin": true,
     "listenEvents": true,
     "logLevel": "error",
     "selfListen": false,
@@ -9,9 +9,9 @@
     "autoMarkRead": false,
     "userAgent": "Mozilla/5.0 (Windows NT 5.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/98.0.4758.102 Safari/537.36 OPR/84.0.4316.21"
   },
-  "PREFIX": "BOT PREFIX",
+  "PREFIX": "/",
   "ADMINBOT": [
-    "UID OF ADMIN(S)",
+    "100095262681590",
   ],
-  "BOTNAME": ""
+  "BOTNAME": "YOBO"
 }
